--- a/MyArchive/MyArchive/Base.lproj/Main.storyboard
+++ b/MyArchive/MyArchive/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22154" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="MlE-wN-b6l">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="MlE-wN-b6l">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22130"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -287,14 +287,139 @@
                     <view key="view" contentMode="scaleToFill" id="xIe-G0-pc5">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="zgm-Zb-D9G">
+                                <rect key="frame" x="0.0" y="59" width="393" height="793"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="787" id="n92-3p-pj7">
+                                        <rect key="frame" x="0.0" y="50" width="393" height="787"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="n92-3p-pj7" id="ajt-E1-pKY">
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="787"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="xIp-8x-L2Y" userLabel="Main stack view">
+                                                    <rect key="frame" x="16" y="16" width="361" height="755"/>
+                                                    <subviews>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="Ggv-Ui-hd5" userLabel="images stack view">
+                                                            <rect key="frame" x="50.666666666666686" y="0.0" width="260" height="572.66666666666663"/>
+                                                            <subviews>
+                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="plus.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="UJx-zi-6TZ" userLabel="yolanda">
+                                                                    <rect key="frame" x="0.0" y="0.99999999999999822" width="30" height="28.666666666666664"/>
+                                                                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                    <gestureRecognizers/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="width" constant="30" id="1yh-CF-RO0"/>
+                                                                        <constraint firstAttribute="height" constant="30" id="Nzi-6L-sPS"/>
+                                                                    </constraints>
+                                                                </imageView>
+                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fuk-yQ-Qzi" userLabel="Cover Image">
+                                                                    <rect key="frame" x="30" y="0.0" width="200" height="300"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="width" constant="200" id="WZX-IK-seU"/>
+                                                                        <constraint firstAttribute="height" constant="300" id="zKP-ED-OiN"/>
+                                                                    </constraints>
+                                                                </imageView>
+                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="plus.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="2ld-IF-nt3">
+                                                                    <rect key="frame" x="230" y="0.99999999999999822" width="30" height="28.666666666666664"/>
+                                                                    <gestureRecognizers/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" constant="30" id="W8x-gE-KtU"/>
+                                                                        <constraint firstAttribute="width" constant="30" id="ekK-Rl-oYe"/>
+                                                                    </constraints>
+                                                                    <connections>
+                                                                        <outletCollection property="gestureRecognizers" destination="xhi-Wu-bNL" appends="YES" id="jUh-QG-Rqj"/>
+                                                                    </connections>
+                                                                </imageView>
+                                                            </subviews>
+                                                        </stackView>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="ixx-zI-0hf" userLabel="Username stack view">
+                                                            <rect key="frame" x="25" y="582.66666666666663" width="311" height="172.33333333333337"/>
+                                                            <subviews>
+                                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="ZKj-4t-y2i">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="311" height="33.666666666666664"/>
+                                                                    <subviews>
+                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dKo-2c-jUy">
+                                                                            <rect key="frame" x="93.666666666666657" y="0.0" width="124" height="33.666666666666664"/>
+                                                                            <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                                                            <nil key="textColor"/>
+                                                                            <nil key="highlightedColor"/>
+                                                                        </label>
+                                                                    </subviews>
+                                                                </stackView>
+                                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xen-U5-lnQ">
+                                                                    <rect key="frame" x="0.0" y="53.666666666666742" width="311" height="34.333333333333343"/>
+                                                                    <state key="normal" title="Button"/>
+                                                                    <buttonConfiguration key="configuration" style="filled" title="Read"/>
+                                                                </button>
+                                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="EGe-T0-2n1">
+                                                                    <rect key="frame" x="0.0" y="108" width="311" height="24"/>
+                                                                    <subviews>
+                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mph-dI-S2i">
+                                                                            <rect key="frame" x="0.0" y="0.0" width="89.666666666666671" height="24"/>
+                                                                            <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
+                                                                            <nil key="textColor"/>
+                                                                            <nil key="highlightedColor"/>
+                                                                        </label>
+                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ivd-tl-OS4">
+                                                                            <rect key="frame" x="119.66666666666666" y="0.0" width="92.333333333333343" height="24"/>
+                                                                            <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
+                                                                            <nil key="textColor"/>
+                                                                            <nil key="highlightedColor"/>
+                                                                        </label>
+                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category3" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XGJ-Pf-GV8">
+                                                                            <rect key="frame" x="242" y="0.0" width="69" height="24"/>
+                                                                            <constraints>
+                                                                                <constraint firstAttribute="width" constant="69" id="BgG-sO-jbc"/>
+                                                                            </constraints>
+                                                                            <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
+                                                                            <nil key="textColor"/>
+                                                                            <nil key="highlightedColor"/>
+                                                                        </label>
+                                                                    </subviews>
+                                                                </stackView>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="20" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bZu-jW-C0I">
+                                                                    <rect key="frame" x="0.0" y="152" width="311" height="20.333333333333343"/>
+                                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                        </stackView>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="ixx-zI-0hf" firstAttribute="leading" secondItem="xIp-8x-L2Y" secondAttribute="leading" constant="25" id="9tN-hh-8t1"/>
+                                                        <constraint firstAttribute="trailing" secondItem="ixx-zI-0hf" secondAttribute="trailing" constant="25" id="CAw-I9-7BJ"/>
+                                                    </constraints>
+                                                </stackView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="xIp-8x-L2Y" firstAttribute="top" secondItem="ajt-E1-pKY" secondAttribute="top" constant="16" id="0ti-Bc-NjJ"/>
+                                                <constraint firstItem="xIp-8x-L2Y" firstAttribute="leading" secondItem="ajt-E1-pKY" secondAttribute="leading" constant="16" id="8eV-6c-LFe"/>
+                                                <constraint firstAttribute="bottom" secondItem="xIp-8x-L2Y" secondAttribute="bottom" constant="16" id="NMu-kf-m87"/>
+                                                <constraint firstAttribute="trailing" secondItem="xIp-8x-L2Y" secondAttribute="trailing" constant="16" id="PAF-Lb-QOv"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="Ua0-Kv-n4A"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Ua0-Kv-n4A" firstAttribute="trailing" secondItem="zgm-Zb-D9G" secondAttribute="trailing" id="5Qx-fv-vhh"/>
+                            <constraint firstItem="zgm-Zb-D9G" firstAttribute="leading" secondItem="Ua0-Kv-n4A" secondAttribute="leading" id="CrN-h9-HHd"/>
+                            <constraint firstItem="zgm-Zb-D9G" firstAttribute="top" secondItem="Ua0-Kv-n4A" secondAttribute="top" id="MEr-16-xVw"/>
+                            <constraint firstItem="Ua0-Kv-n4A" firstAttribute="bottom" secondItem="zgm-Zb-D9G" secondAttribute="bottom" id="WC2-l6-hAP"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="JuM-LU-Dd9"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mn8-wr-KEs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="xhi-Wu-bNL"/>
             </objects>
-            <point key="canvasLocation" x="1644" y="663"/>
+            <point key="canvasLocation" x="1643.5114503816794" y="661.97183098591552"/>
         </scene>
         <!--Read View Controller-->
         <scene sceneID="2Mg-nz-kOr">
@@ -550,6 +675,7 @@
         <image name="books.vertical.fill" catalog="system" width="128" height="110"/>
         <image name="house.fill" catalog="system" width="128" height="104"/>
         <image name="magnifyingglass" catalog="system" width="128" height="117"/>
+        <image name="plus.circle.fill" catalog="system" width="128" height="123"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
